# part_generator_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
gui/: app.py
src/part_generator_api/: main.py
src/part_generator_api/data/: iso_4762.json
src/part_generator_api/geometry/: __init__.py  base.py  screw.py  washer.py
src/part_generator_api/models/: __init__.py  requests.py
src/part_generator_api/routers/: __init__.py  generate.py
tests/: test_endpoints.py  test_geometry.py  test_health.py  test_models.py
