[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "part-generator-api"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "build123d>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/part_generator_api"]
